kubernetes/eks/sample-applications/spring-polls-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: polling-app
  labels:
    name: polling-app
